--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -21,20 +21,34 @@
 2015 ©tanam<BR>
 <B>HP:</B><BR> <A HREF="http://www.geocities.jp/parallel_computer_inc/android.html">http://www.geocities.jp/parallel_computer_inc/android.html</A><BR>
 
+<h2>MSX 1/2:</h2>
+2015 ©umaiboux<BR>
+<B>HP:</B><BR> <A HREF="http://umaiboux.k-free.net/">http://umaiboux.k-free.net/</A><BR>
+
+<h2>MZ-80A:</h2>
+2014,2015 ©hideki suga<BR>
+<B>HP:</B><BR> <A HREF="http://www.ne.jp/asahi/suga/junkyard/">http://www.ne.jp/asahi/suga/junkyard/</A><BR>
+
+<h2>Z80 TV Game:</h2>
+2014,2015 ©Isizu<BR>
+<B>HP:</B><BR> <A HREF="http://w01.tp1.jp/~a571632211/index.html">http://w01.tp1.jp/~a571632211/index.html</A><BR>
+<A HREF="http://w01.tp1.jp/~a571632211/z80tvgame/index.html">http://w01.tp1.jp/~a571632211/z80tvgame/index.html</A><BR>
+
+
 <h2>FM-7/8/77/AV Series:</h2>
 2015 ©Kyuma Ohta<BR>
 <B>HP:</B><BR> <A HREF="https://github.com/Artanejp/common_source_project-fm7">https://github.com/Artanejp/common_source_project-fm7</A><BR>
 <I>E-Mail: whatisthis.sowhat _at_ gmail.com </I><BR>
 <BR>
 <BR>
-<B>All of distributing are published by Gnu Public License version 2.<BR>
+<B>All of distributing are published under Gnu Public License version 2.<BR>
 You must publish sourcecodes to users of binaries, you must publish changes of source codes to users.<BR>
 <BR>
-See details:<BR>
+See also:<BR>
 <A HREF="https://www.gnu.org/licenses/gpl-2.0.html">https://www.gnu.org/licenses/gpl-2.0.html</A> .<BR>
 </B>
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Wed Oct 28 20:28:04 JST 2015 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Wed Oct 28 23:02:22 JST 2015 <!-- hhmts end -->
 </body> </html>
