--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -7,6 +7,11 @@
 
 <body>
 <h1>Common Source Code Project</h1>
+<DIV ALIGN=RIGHT><FONT SIZE=-1>
+Upstream Version: 2015-10-31<BR>
+SNAPSHOT 2015-11-05-1<BR>
+Build Version: Git b166b5c2ca66457baf348b7fe55c55d63028e609</FONT></DIV>
+<BR>
 <h2>Upstream Author:</h2>
 2006,2015 ©TAKEDA Toshiya<BR>
 <B>HP:</B><BR> <A HREF="http://homepage3.nifty.com/takeda-toshiya/common/index.html">http://homepage3.nifty.com/takeda-toshiya/common/index.html</A><BR>
@@ -50,5 +55,5 @@ See also:<BR>
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Wed Oct 28 23:02:22 JST 2015 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu Nov 05 22:40:16 JST 2015 <!-- hhmts end -->
 </body> </html>
