[DOC][Qt] Update credits, thanks to umaiboux San.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -22,11 +22,11 @@ Build Version: Git 910b3cce215964380fa3dbe38fbb673c52bf4d34</FONT></DIV>
 <I>E-Mail: whatisthis.sowhat _at_ gmail.com </I><BR>
 
 
-<h2>PC-6001 Series , SEGA Master System/Game Gear and MSX2:</h2>
+<h2>PC-6001 Series , SEGA Master System/Game Gear, MSX1 and MSX2:</h2>
 2015 ©tanam<BR>
 <B>HP:</B><BR> <A HREF="http://www.geocities.jp/parallel_computer_inc/android.html">http://www.geocities.jp/parallel_computer_inc/android.html</A><BR>
 
-<h2>MSX 1/2:</h2>
+<h2>MSX 2:</h2>
 2015 ©umaiboux<BR>
 <B>HP:</B><BR> <A HREF="http://umaiboux.k-free.net/">http://umaiboux.k-free.net/</A><BR>
 
@@ -55,5 +55,5 @@ See also:<BR>
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Fri Nov 14 20:13:28 JST 2015 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sun Nov 15 22:10:23 JST 2015 <!-- hhmts end -->
 </body> </html>
