[DOC] Update documents with SNAPSHOT 2015-11-17.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,8 +9,8 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=-1>
 Upstream Version: 2015-10-31<BR>
-SNAPSHOT 2015-11-14-1<BR>
-Build Version: Git 910b3cce215964380fa3dbe38fbb673c52bf4d34</FONT></DIV>
+SNAPSHOT 2015-11-17-1<BR>
+Build Version: Git 64f901722d3382bc3feb6680a5ede240dcad2773</FONT></DIV>
 <BR>
 <h2>Upstream Author:</h2>
 2006,2015 ©TAKEDA Toshiya<BR>
@@ -26,7 +26,7 @@ Build Version: Git 910b3cce215964380fa3dbe38fbb673c52bf4d34</FONT></DIV>
 2015 ©tanam<BR>
 <B>HP:</B><BR> <A HREF="http://www.geocities.jp/parallel_computer_inc/android.html">http://www.geocities.jp/parallel_computer_inc/android.html</A><BR>
 
-<h2>MSX 2:</h2>
+<h2>MSX1 and MSX2:</h2>
 2015 ©umaiboux<BR>
 <B>HP:</B><BR> <A HREF="http://umaiboux.k-free.net/">http://umaiboux.k-free.net/</A><BR>
 
@@ -55,5 +55,5 @@ See also:<BR>
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Sun Nov 15 22:10:23 JST 2015 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Mon Nov 16 13:46:19 JST 2015 <!-- hhmts end -->
 </body> </html>
