[VM][General] Merge updtream 2015-11-18.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,9 +8,9 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=-1>
-Upstream Version: 2015-10-31<BR>
-SNAPSHOT 2015-11-17-1<BR>
-Build Version: Git 64f901722d3382bc3feb6680a5ede240dcad2773</FONT></DIV>
+Upstream Version: 2015-11-18<BR>
+SNAPSHOT 2015-11-19-1<BR>
+Build Version: </FONT></DIV>
 <BR>
 <h2>Upstream Author:</h2>
 2006,2015 ©TAKEDA Toshiya<BR>
@@ -55,5 +55,5 @@ See also:<BR>
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Mon Nov 16 13:46:19 JST 2015 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu Nov 19 19:28:55 JST 2015 <!-- hhmts end -->
 </body> </html>
