[DOC] Update credits.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,9 +8,9 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=-1>
-Upstream Version: 2015-12-17<BR>
-SNAPSHOT 2015-12-22-1<BR>
-Build Version: 956581bd7f969f36d5146018ea19297fa5cd9db0</FONT></DIV>
+Upstream Version: 2015-12-31<BR>
+SNAPSHOT 2016-01-07-1<BR>
+Build Version: f1e424ee08fd6a98330808a38ed370ebeffcf903</FONT></DIV>
 <BR>
 <h2>Upstream Author:</h2>
 2006,2015 ©TAKEDA Toshiya<BR>
@@ -55,5 +55,5 @@ See also:<BR>
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Thu Dec 22 18:23:20 JST 2015 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu 07 Jan, 2016 19:01:03<!-- hhmts end -->
 </body> </html>
