[DOC] Update to 2016-01-24.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,8 +9,8 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=-1>
 Upstream Version: 2016-01-10<BR>
-SNAPSHOT 2016-01-19-1<BR>
-Build Version: eced83faa808f2fde47a24365ebe4a6656aa40fb</FONT></DIV>
+SNAPSHOT 2016-01-24<BR>
+Build Version: f6248ec7dfa76e776eddcb0e685fbf6b7ff58b65</FONT></DIV>
 <BR>
 <h2>Upstream Author:</h2>
 2006,2015 ©TAKEDA Toshiya<BR>
