[DOC] Update FAQs.

--- a/FAQ.ja.html
+++ b/FAQ.ja.html
@@ -40,6 +40,6 @@ Q. 性別は？リア充ですか？<BR>
 A. 男です。リア充ではありません(p｀・ω・´q)<BR>
 <BR>
 <address>K.Ohta &lt;whatisthis.sowhat _at_ gmail.com&gt;</address>
-<!-- hhmts start -->Last modified: Sun 24 Jan, 2016 15:07:52<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sun 24 Jan, 2016 15:07:52 JST<!-- hhmts end -->
 </body> </html>
 
