[DOC] Update English FAQ.

--- a/FAQ.html
+++ b/FAQ.html
@@ -27,7 +27,8 @@ A. Try set environment variable QT_OPENGL to angle,desktop or software.<BR>
 <BR>
 Q. I found BUG. Where I report to?<BR>
 A. If you can talk with Japanese, write to "PC emulator general thread" of Japanese BBS "2Channel"'s Retro PC board.<BR>
-   But, I recommand to report to GITHUB's issues.<BR>
+   I also accept bug reports at Twitter, but not recommanded.<BR>
+   I recommand to report to GITHUB's issues.<BR>
    <A HREF="https://github.com/Artanejp/common_source_project-fm7/issues">https://github.com/Artanejp/common_source_project-fm7/issues</A><BR>
 <BR>
 Q. Where I place ROMS to?<BR>
