[DOC] Add forgotten line feed.

--- a/FAQ.html
+++ b/FAQ.html
@@ -34,7 +34,7 @@ A. If you can talk with Japanese, write to "PC emulator general thread" of Japan
 Q. Where I place ROMS to?<BR>
 A. With Windows, place .\emu{VM-Name} . With other OSs, place ~/emu{VM-Name} .<BR>
 <BR>
-Q. Where I get ROMS from...
+Q. Where I get ROMS from...<BR>
 A. DUMP from *real* machine. DO NOT use the internet。°(●'ω'o)°。うるうる<BR>
 <BR>
 Q. What's your SEX? And are you リア充(ria-jyu,  fulfilling IRLs)?<BR>
