[DOC][FAQ] I missed language (^_^;

--- a/FAQ.html
+++ b/FAQ.html
@@ -5,7 +5,7 @@
 <title>Common Source Code Project : FAQ(English)</title>
 </head>
 
-<H2>FAQ for Common source code project (CSP) (Japanese)</H2>
+<H2>FAQ for Common source code project (CSP) (English)</H2>
 <div align=right>Jan 24, 2016<BR>
 	 K.Ohta &lt;whatisthis.sowhat _at_ gmail.com&gt;<BR></DIV>
 <BR>
