[DOC][Qt][HELP] Adjust size of text.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -7,11 +7,12 @@
 
 <body>
 <h1>Common Source Code Project</h1>
-<DIV ALIGN=RIGHT><FONT SIZE=-1>
+<DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-02-26<BR>
 SNAPSHOT 2016-02-26-1<BR>
-Build Version: c64bd7e03b0a11d094dbdd7e242d5166451d8301</FONT></DIV>
+Build Version: 50e8c34fdcece5bb31cd736a3d732af44cb14509</FONT></DIV>
 <BR>
+<DIV ALIGN=RIGHT><FONT SIZE=3>
 <h2>Upstream Author:</h2>
 2006,2015 ©TAKEDA Toshiya<BR>
 <B>HP:</B><BR> <A HREF="http://homepage3.nifty.com/takeda-toshiya/common/index.html">http://homepage3.nifty.com/takeda-toshiya/common/index.html</A><BR>
@@ -52,7 +53,7 @@ You must publish sourcecodes to users of binaries, you must publish changes of s
 See also:<BR>
 <A HREF="https://www.gnu.org/licenses/gpl-2.0.html">https://www.gnu.org/licenses/gpl-2.0.html</A> .<BR>
 </B>
-
+</FONT>
 <hr>
 <address></address>
 <!-- hhmts start -->Last modified: Fri 26 Feb, 2016 19:51:41<!-- hhmts end -->
