[DOC] Update to 2016-02-26 HOTFIX1

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,8 +9,8 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-02-26<BR>
-SNAPSHOT 2016-02-26-1<BR>
-Build Version: 82115ccfbcd6c8493933e518779c1d7f70940c9f</FONT></DIV>
+SNAPSHOT 2016-02-26 HOTFIX1<BR>
+Build Version: 2e87abcb02cee28532215484517d999b561817a3</FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
 <h2>Upstream Author:</h2>
