[DOC] Update documents.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,9 +8,9 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
-Upstream Version: 2016-02-26<BR>
-SNAPSHOT 2016-02-26 HOTFIX1<BR>
-Build Version: 2e87abcb02cee28532215484517d999b561817a3</FONT></DIV>
+Upstream Version: 2016-03-01<BR>
+SNAPSHOT 2016-03-03<BR>
+Build Version: 92d31065cadd027a389416b60f8ae13bb4911e1c</FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
 <h2>Upstream Author:</h2>
@@ -56,5 +56,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Sat 27 Feb, 2016 00:16:16<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu 03 Mar, 2016 23:02:28<!-- hhmts end -->
 </body> </html>
