[DOC] Update credits, READMEs.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,8 +9,8 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-03-01<BR>
-SNAPSHOT 2016-03-03<BR>
-Build Version: 92d31065cadd027a389416b60f8ae13bb4911e1c</FONT></DIV>
+SNAPSHOT 2016-03-04<BR>
+Build Version: 2fc557e88d2715f5fda328ecf38af4b81714b81e</FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
 <h2>Upstream Author:</h2>
@@ -43,7 +43,12 @@ Build Version: 92d31065cadd027a389416b60f8ae13bb4911e1c</FONT></DIV>
 
 <h2>FM-7/8/77/AV Series:</h2>
 2015 ©Kyuma Ohta<BR>
-<B>HP:</B><BR> <A HREF="https://github.com/Artanejp/common_source_project-fm7">https://github.com/Artanejp/common_source_project-fm7</A><BR>
+<B>HP:</B><BR>
+<A HREF="https://github.com/Artanejp/common_source_project-fm7">https://github.com/Artanejp/common_source_project-fm7</A><BR>
+<B>Secondary:</B><BR>
+<A HREF="https://www.pikacode.com/Artanejp/common_source_project-fm7/">https://www.pikacode.com/Artanejp/common_source_project-fm7/</A><BR>
+<BR>
+<BR>
 <I>E-Mail: whatisthis.sowhat _at_ gmail.com </I><BR>
 <BR>
 <BR>
@@ -56,5 +61,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Thu 03 Mar, 2016 23:02:28<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Fri 04 Mar, 2016 23:01:28<!-- hhmts end -->
 </body> </html>
