[DOC] Update documentation for Release: "Pray for all people injured by Great East Japan Earthquake".

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,8 +9,8 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-03-05<BR>
-SNAPSHOT 2016-03-10<BR>
-Build Version: 3c795bcbc6eb3888af057825945ab05d57b7eae4</FONT></DIV>
+SNAPSHOT 2016-03-11 "Pray for all people injured by Great East Japan Earthquake"<BR>
+Build Version: 9bf4e859273593bffa3ce5b55382776df6171536</FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
 <h2>Upstream Author:</h2>
@@ -61,5 +61,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Thu 10 Mar, 2016 20:54:40<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu 11 Mar, 2016 01:56:27<!-- hhmts end -->
 </body> </html>
