--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,9 +8,9 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
-Upstream Version: 2016-03-05<BR>
-SNAPSHOT 2016-03-11 "Pray for all people injured by Great East Japan Earthquake"<BR>
-Build Version: cc9a6b95d3ee6765a3b9d8befe9243a1522032ac</FONT></DIV>
+Upstream Version: 2016-03-17<BR>
+SNAPSHOT 2016-03-24<BR>
+Build Version: ea4930417b9b0ab1dbb34babf2ab95fa20012312</FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
 <h2>Upstream Author:</h2>
