[DOC] Update credits.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -10,7 +10,8 @@
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
 SNAPSHOT 2016-05-11<BR>
-Build Version: d386309c8432d1cad69dd6d606b64345e5e11275</FONT></DIV>
+LIBCSPGUI 1.1.0<BR>
+Build Version: 3dc08e964c7a3e6199db64172cbbfc3d09a9cbdc</FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
 <h2>Upstream Author:</h2>
