[BUILD][WIN32] Update credits.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -11,7 +11,9 @@
 Upstream Version: 2016-04-13<BR>
 SNAPSHOT 2016-05-11<BR>
 LIBCSPGUI 1.1.0<BR>
-Build Version: 3dc08e964c7a3e6199db64172cbbfc3d09a9cbdc</FONT></DIV>
+Build Version: 3dc08e964c7a3e6199db64172cbbfc3d09a9cbdc<BR>
+Build Version of Win32: cc0a44a52e4102809c7ae7dd78d8a8f25ffa382a
+</FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
 <h2>Upstream Author:</h2>
