--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,10 +9,11 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-SNAPSHOT 2016-05-21<BR>
-LIBCSPGUI 1.1.0<BR>
-LIBCSPOSD 1.0.0<BR>
-Build Version: 3dc08e964c7a3e6199db64172cbbfc3d09a9cbdc<BR>
+SNAPSHOT 2016-05-23<BR>
+LIBCSPEMU_UTILS 1.0.0<BR>
+LIBCSPGUI 1.2.0<BR>
+LIBCSPOSD 1.1.0<BR>
+Build Version: <BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
