[DOC] Set git revision to credits.html .

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -13,7 +13,7 @@ SNAPSHOT 2016-05-23<BR>
 LIBCSPEMU_UTILS 1.0.0<BR>
 LIBCSPGUI 1.2.0<BR>
 LIBCSPOSD 1.1.0<BR>
-Build Version: <BR>
+Build Version: 072d5800fb28ff2970081c613649b38042653995<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -65,5 +65,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Wed 27 Apr, 2016 22:33:12<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Mon 23 May, 2016 02:26:47<!-- hhmts end -->
 </body> </html>
