[DOC] Update documents.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,11 +9,11 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-SNAPSHOT 2016-05-23<BR>
+SNAPSHOT 2016-05-23-2<BR>
 LIBCSPEMU_UTILS 1.0.0<BR>
 LIBCSPGUI 1.2.0<BR>
 LIBCSPOSD 1.1.0<BR>
-Build Version: 92367b75e397b6234984403e988c3cb5cea023bf<BR>
+Build Version: c1448dc84f5439c7c8931614a8397dbefb6383da<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
