--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,12 +9,12 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-Qt Port and FM7 series 2016-06-08<BR>
-libCSPavio 1.1.0<BR>
-libCSPgui 1.3.0<BR>
-libCSPosd 1.2.0<BR>
+Qt Port and FM7 series 2016-06-09<BR>
+libCSPavio 1.2.0<BR>
+libCSPgui 1.3.2<BR>
+libCSPosd 1.2.1<BR>
 libCSPemu_utils 1.0.1<BR>
-Build Version: 2142d5c7426e21cfeedbaea0450f238f8b4d7d38<BR>
+Build Version: <BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
