--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -14,7 +14,7 @@ libCSPavio 1.2.0<BR>
 libCSPgui 1.3.2<BR>
 libCSPosd 1.2.1<BR>
 libCSPemu_utils 1.0.1<BR>
-Build Version: <BR>
+Build Version: 2defdfbc5142b9f858031f37b9e99992dfbe8f4e<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
