--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,12 +9,13 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-Qt Port and FM7 series 2016-06-11<BR>
-libCSPavio 1.2.1<BR>
-libCSPgui 1.3.3<BR>
-libCSPosd 1.2.2<BR>
+Qt Port and FM7 series 2016-06-18<BR>
+libCSPavio 1.2.3<BR>
+libCSPgui 1.3.4<BR>
+libCSPosd 1.2.3<BR>
 libCSPemu_utils 1.0.1<BR>
-Build Version: 89d31ce8daa733ea4a0c38f0a1890d3a0fcfce38<BR>
+FFMPEG 3.0.2<BR>
+Build Version: fa5fa3841386d84736b5a80b444d6afc996c59cd<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -66,5 +67,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Sat 11 June, 2016 05:10:59<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat 18 June, 2016 01:07:26<!-- hhmts end -->
 </body> </html>
