--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,13 +9,13 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-Qt Port and FM7 series 2016-06-18<BR>
-libCSPavio 1.2.3<BR>
-libCSPgui 1.3.4<BR>
-libCSPosd 1.2.3<BR>
-libCSPemu_utils 1.0.1<BR>
-FFMPEG 3.0.2<BR>
-Build Version: 629f7d70816c04b38c3ab8cc277147a6bd2c2d2a<BR>
+Qt Port and FM7 series 2016-06-21<BR>
+libCSPavio 2.0.0<BR>
+libCSPgui 2.0.0<BR>
+libCSPosd 2.0.0<BR>
+libCSPemu_utils 2.0.0<BR>
+FFMPEG 3.0.2 + liblame 3.99 + libx264-148<BR>
+Build Version: 85c331b7635ca713e819218b86d65a877b7478f3<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
