[DOC] Update updtream's URL, moved to takeda-toshiya.my.coocan.jp .

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,23 +9,24 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-Qt Port and FM7 series 2016-08-19<BR>
-libCSPavio 2.3.1<BR>
-libCSPgui 2.0.2<BR>
-libCSPosd 2.2.0<BR>
-libCSPemu_utils 2.0.0<BR>
+Qt Port and FM7 series 2016-09-06<BR>
+libCSPavio 2.4.2<BR>
+libCSPgui 2.1.5<BR>
+libCSPosd 2.4.1<BR>
+libCSPemu_utils 2.1.2<BR>
 FFMPEG 3.1.1 + liblame 3.99 + libx264-148<BR>
-Build Version: 77380a77b25ca06965b912c84509e5c91085aeb1<BR>
+Build Version: <BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
 <h2>Upstream Author:</h2>
 2006,2015 ©TAKEDA Toshiya<BR>
-<B>HP:</B><BR> <A HREF="http://homepage3.nifty.com/takeda-toshiya/common/index.html">http://homepage3.nifty.com/takeda-toshiya/common/index.html</A><BR>
+<B>HP:</B><BR> <A HREF="http://takeda-toshiya.my.coocan.jp/common/index.html">http://takeda-toshiya.my.coocan.jp/common/index.html</A><BR>
 
 <h2>Porting to Qt:</h2>
 2015 ©Kyuma Ohta<BR>
-<B>HP:</B><BR> <A HREF="https://github.com/Artanejp/common_source_project-fm7">https://github.com/Artanejp/common_source_project-fm7</A><BR>
+<B>HP1:</B><BR> <A HREF="https://github.com/Artanejp/common_source_project-fm7">https://github.com/Artanejp/common_source_project-fm7</A><BR>
+<B>HP2:</B><BR> <A HREF="https://osdn.jp/projects/csp-qt/">https://osdn.jp/projects/csp-qt/</A><BR>
 <I>E-Mail: whatisthis.sowhat _at_ gmail.com </I><BR>
 
 
@@ -50,9 +51,9 @@ Build Version: 77380a77b25ca06965b912c84509e5c91085aeb1<BR>
 <h2>FM-7/8/77/AV Series:</h2>
 2015 ©Kyuma Ohta<BR>
 <B>HP:</B><BR>
-<A HREF="https://github.com/Artanejp/common_source_project-fm7">https://github.com/Artanejp/common_source_project-fm7</A><BR>
+<A HREF="https://osdn.jp/projects/csp-qt/">https://osdn.jp/projects/csp-qt/</A><BR>
 <B>Secondary:</B><BR>
-<A HREF="https://www.pikacode.com/Artanejp/common_source_project-fm7/">https://www.pikacode.com/Artanejp/common_source_project-fm7/</A><BR>
+<A HREF="https://github.com/Artanejp/common_source_project-fm7">https://github.com/Artanejp/common_source_project-fm7</A><BR>
 <BR>
 <BR>
 <I>E-Mail: whatisthis.sowhat _at_ gmail.com </I><BR>
@@ -67,5 +68,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Fri 19 August, 2016 23:14:39<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Tue. 06,September, 2016 01:19:10<!-- hhmts end -->
 </body> </html>
