[DOC] Update to SNAPSHOT 2016-09-09.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,9 +9,9 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-Qt Port and FM7 series 2016-09-06<BR>
+Qt Port and FM7 series 2016-09-09<BR>
 libCSPavio 2.4.2<BR>
-libCSPgui 2.1.5<BR>
+libCSPgui 2.2.0<BR>
 libCSPosd 2.4.1<BR>
 libCSPemu_utils 2.1.2<BR>
 FFMPEG 3.1.1 + liblame 3.99 + libx264-148<BR>
@@ -68,5 +68,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Tue. 06,September, 2016 01:19:10<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Fri 09,September, 2016 00:56:25<!-- hhmts end -->
 </body> </html>
