[DOC] Update build version.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -15,7 +15,7 @@ libCSPgui 2.2.0<BR>
 libCSPosd 2.4.1<BR>
 libCSPemu_utils 2.1.2<BR>
 FFMPEG 3.1.1 + liblame 3.99 + libx264-148<BR>
-Build Version: <BR>
+Build Version: 1884b5247665d71c06fc6590b17434c5f3350ad5<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
