[DOC] Re-update to release.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -15,7 +15,7 @@ libCSPgui 2.3.2<BR>
 libCSPosd 2.5.0<BR>
 libCSPemu_utils 2.2.0<BR>
 FFMPEG 3.1.1 + liblame 3.99 + libx264-148<BR>
-Build Version: 3129bcfe18267942d202153a683b2d4e56fc96a8<BR>
+Build Version: d100ae8323d6657fe37ac44a69abc8da470b77ad<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -68,5 +68,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Sun 09,October, 2016 23:31:11<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Mon 10,October 2016 05:52:09<!-- hhmts end -->
 </body> </html>
