--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -10,12 +10,14 @@
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-12-31<BR>
 Qt Port and FM7 series 2017-01-30<BR>
-libCSPavio 2.5.3<BR>
-libCSPgui 2.4.3<BR>
-libCSPosd 2.5.3<BR>
-libCSPemu_utils 2.2.2<BR>
+libCSPavio 2.6.0<BR>
+libCSPgui 2.5.0<BR>
+libCSPosd 2.6.0<BR>
+libCSPemu_utils 2.2.3<BR>
+libCSPcommon_vm 1.0.1<BR>
+libCSPfmgen 1.0.1<BR>
 FFMPEG 3.2.2 + liblame 3.99 + libx264-148<BR>
-Build Version: cef2d4601438fd1fa680485ddba3434690e58451<BR>
+Build Version: <BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -68,5 +70,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Mon 30, January 2017 05:04:55<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Tue 30, March 2017 02:45:55<!-- hhmts end -->
 </body> </html>
