--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,8 +8,8 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
-Upstream Version: 2016-12-31<BR>
-Qt Port and FM7 series 2017-01-30<BR>
+Upstream Version: 2017-03-04<BR>
+Qt Port and FM7 series 2017-03-07<BR>
 libCSPavio 2.6.0<BR>
 libCSPgui 2.5.0<BR>
 libCSPosd 2.6.0<BR>
@@ -17,7 +17,7 @@ libCSPemu_utils 2.2.3<BR>
 libCSPcommon_vm 1.0.1<BR>
 libCSPfmgen 1.0.1<BR>
 FFMPEG 3.2.2 + liblame 3.99 + libx264-148<BR>
-Build Version: <BR>
+Build Version: 1014e6fc73aa1fe867da01724a8126aa70331954<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
