[General] Update SOVERSION.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,16 +8,16 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
-Upstream Version: 2017-05-15<BR>
-Qt Port and FM7 series 2017-05-18 HOTFIX1<BR>
-libCSPavio 2.6.4<BR>
-libCSPgui 2.9.2<BR>
-libCSPosd 2.8.1<BR>
-libCSPemu_utils 2.5.0<BR>
-libCSPcommon_vm 1.1.6<BR>
+Upstream Version: 2017-08-10<BR>
+Qt Port and FM7 series 2017-08-11<BR>
+libCSPavio 2.6.9<BR>
+libCSPgui 2.10.3<BR>
+libCSPosd 2.9.9<BR>
+libCSPemu_utils 2.6.0<BR>
+libCSPcommon_vm 1.1.17<BR>
 libCSPfmgen 1.1.0<BR>
 FFMPEG 3.2.2 + liblame 3.99 + libx264-148<BR>
-Build Version: 2d337bdf6eb8a168efa1e219d81bb007da5e9d65<BR>
+Build Version: <BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
