[DOC] Update for release.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -17,7 +17,7 @@ libCSPemu_utils 2.6.0<BR>
 libCSPcommon_vm 1.1.17<BR>
 libCSPfmgen 1.1.0<BR>
 FFMPEG 3.2.2 + liblame 3.99 + libx264-148<BR>
-Build Version: <BR>
+Build Version: 04e08d2708a595c518ae0bd92c1713e1854c4310<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
