[WIP][General] Merge upstream 2017-08-12.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,16 +8,16 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
-Upstream Version: 2017-08-10<BR>
-Qt Port and FM7 series 2017-08-11<BR>
-libCSPavio 2.6.9<BR>
-libCSPgui 2.10.3<BR>
-libCSPosd 2.9.9<BR>
-libCSPemu_utils 2.6.0<BR>
-libCSPcommon_vm 1.1.17<BR>
+Upstream Version: 2017-08-12<BR>
+Qt Port and FM7 series 2017-10-18<BR>
+libCSPavio 2.6.10<BR>
+libCSPgui 2.10.4<BR>
+libCSPosd 2.9.10<BR>
+libCSPemu_utils 2.6.1<BR>
+libCSPcommon_vm 1.1.18<BR>
 libCSPfmgen 1.1.0<BR>
 FFMPEG 3.2.2 + liblame 3.99 + libx264-148<BR>
-Build Version: 04e08d2708a595c518ae0bd92c1713e1854c4310<BR>
+Build Version: <BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
