[GENERAL] Merge Upstream 2017-11-28.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,13 +8,13 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
-Upstream Version: 2017-11-25<BR>
-Qt Port and FM7 series 2017-10-18<BR>
+Upstream Version: 2017-11-28<BR>
+Qt Port and FM7 series 2017-12-03(TMP)<BR>
 libCSPavio 2.6.10<BR>
 libCSPgui 2.10.4<BR>
-libCSPosd 2.9.10<BR>
+libCSPosd 2.9.11<BR>
 libCSPemu_utils 2.6.1<BR>
-libCSPcommon_vm 1.1.18<BR>
+libCSPcommon_vm 1.1.20<BR>
 libCSPfmgen 1.1.0<BR>
 FFMPEG 3.2.2 + liblame 3.99 + libx264-152<BR>
 Build Version: <BR>
@@ -70,5 +70,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Wed 18, Oct 2017 16:49:12<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sun 03, Dec 2017 16:35:35<!-- hhmts end -->
 </body> </html>
