[DOC] Merge upstream 2017-12-03.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,15 +8,15 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
-Upstream Version: 2017-11-28<BR>
-Qt Port and FM7 series 2017-12-03(TMP)<BR>
-libCSPavio 2.6.10<BR>
-libCSPgui 2.10.4<BR>
-libCSPosd 2.9.11<BR>
-libCSPemu_utils 2.6.1<BR>
-libCSPcommon_vm 1.1.20<BR>
-libCSPfmgen 1.1.0<BR>
-FFMPEG 3.2.2 + liblame 3.99 + libx264-152<BR>
+Upstream Version: 2017-12-03<BR>
+Qt Port and FM7 series 2017-12-04<BR>
+libCSPavio 2.6.11<BR>
+libCSPgui 2.10.5<BR>
+libCSPosd 2.9.12<BR>
+libCSPemu_utils 2.6.2<BR>
+libCSPcommon_vm 1.1.21<BR>
+libCSPfmgen 1.1.1<BR>
+FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
 Build Version: <BR>
 </FONT></DIV>
 <BR>
