[VM][General] Merge upstream 2017-12-28.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,16 +8,16 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
-Upstream Version: 2017-12-03<BR>
-Qt Port and FM7 series 2017-12-10 (FM-8/7 with Z80 test.Some VMs Only.)<BR>
-libCSPavio 2.6.11<BR>
-libCSPgui 2.10.5<BR>
-libCSPosd 2.9.12<BR>
-libCSPemu_utils 2.6.2<BR>
-libCSPcommon_vm 1.1.22<BR>
-libCSPfmgen 1.1.1<BR>
+Upstream Version: 2017-12-28<BR>
+Qt Port and FM7 series 2018-01-03<BR>
+libCSPavio 2.6.12<BR>
+libCSPgui 2.10.6<BR>
+libCSPosd 2.9.13<BR>
+libCSPemu_utils 2.6.3<BR>
+libCSPcommon_vm 1.1.24<BR>
+libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: c15048ee4635d4413887c2b8374a488a566e63cb<BR>
+Build Version: <BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
