[DOC] Update build version.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -17,7 +17,7 @@ libCSPemu_utils 2.6.3<BR>
 libCSPcommon_vm 1.1.24<BR>
 libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: <BR>
+Build Version: e75ee07f3c9350171adf05a7297fcfcdd3ab2b9a<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
