--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,8 +8,8 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
-Upstream Version: 2017-12-28<BR>
-Qt Port and FM7 series 2018-01-04<BR>
+Upstream Version: 2017-12-27<BR>
+Qt Port and FM7 series 2018-01-13 JCOMMCARD TEST<BR>
 libCSPavio 2.6.12<BR>
 libCSPgui 2.10.6<BR>
 libCSPosd 2.9.13<BR>
@@ -17,7 +17,7 @@ libCSPemu_utils 2.6.3<BR>
 libCSPcommon_vm 1.1.24<BR>
 libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: e75ee07f3c9350171adf05a7297fcfcdd3ab2b9a<BR>
+Build Version: b534e95b101befaf4e9b9354709212eb11090436<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
