--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,7 +9,7 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2017-12-27<BR>
-Qt Port and FM7 series 2018-01-13 JCOMMCARD TEST<BR>
+Qt Port and FM7 series 2018-01-14 JCOMMCARD TEST2<BR>
 libCSPavio 2.6.12<BR>
 libCSPgui 2.10.6<BR>
 libCSPosd 2.9.13<BR>
@@ -17,7 +17,7 @@ libCSPemu_utils 2.6.3<BR>
 libCSPcommon_vm 1.1.24<BR>
 libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: b534e95b101befaf4e9b9354709212eb11090436<BR>
+Build Version: 50e8067697fb0b21a5e6779e64b4eb1f151191f4<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
