--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,7 +9,7 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2017-12-27<BR>
-Qt Port and FM7 series 2018-01-14 JCOMMCARD TEST2<BR>
+Qt Port and FM7 series 2018-01-17 DMA TEST1<BR>
 libCSPavio 2.6.12<BR>
 libCSPgui 2.10.6<BR>
 libCSPosd 2.9.13<BR>
