[DOC] Update revision and README.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,7 +9,7 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2017-12-27<BR>
-Qt Port and FM7 series 2018-01-17 DMA TEST1<BR>
+Qt Port and FM7 series 2018-01-18 MB8877 TEST1<BR>
 libCSPavio 2.6.12<BR>
 libCSPgui 2.10.6<BR>
 libCSPosd 2.9.13<BR>
@@ -17,7 +17,7 @@ libCSPemu_utils 2.6.3<BR>
 libCSPcommon_vm 1.1.24<BR>
 libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: 2350969f27f089a9a3df39f8fb456cad4adeda2d<BR>
+Build Version: 6be0565e6812d5d73d4c7b2b32a49a07ddbbd55c<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
