[DOC] Update revision.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,12 +9,12 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2017-12-27<BR>
-Qt Port and FM7 series 2018-01-19<BR>
+Qt Port and FM7 series 2018-01-28 FLEX TEST<BR>
 libCSPavio 2.6.12<BR>
 libCSPgui 2.10.7<BR>
 libCSPosd 2.9.14<BR>
 libCSPemu_utils 2.6.3<BR>
-libCSPcommon_vm 1.1.25<BR>
+libCSPcommon_vm 1.1.26<BR>
 libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
 Build Version: 9376345bc1270e2a76db816636b645e744d09e82<BR>
