[DOC] Update revision.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,15 +9,15 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2017-12-27<BR>
-Qt Port and FM7 series 2018-01-28 FLEX TEST<BR>
-libCSPavio 2.6.12<BR>
-libCSPgui 2.10.7<BR>
+Qt Port and FM7 series 2018-01-28 FLEX TEST 2<BR>
+libCSPavio 2.6.13<BR>
+libCSPgui 2.10.8<BR>
 libCSPosd 2.9.14<BR>
-libCSPemu_utils 2.6.3<BR>
+libCSPemu_utils 2.6.4<BR>
 libCSPcommon_vm 1.1.26<BR>
 libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: 9376345bc1270e2a76db816636b645e744d09e82<BR>
+Build Version: 
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -29,6 +29,9 @@ Build Version: 9376345bc1270e2a76db816636b645e744d09e82<BR>
 2015 ©Kyuma Ohta<BR>
 <B>HP1:</B><BR> <A HREF="https://github.com/Artanejp/common_source_project-fm7">https://github.com/Artanejp/common_source_project-fm7</A><BR>
 <B>HP2:</B><BR> <A HREF="https://osdn.jp/projects/csp-qt/">https://osdn.jp/projects/csp-qt/</A><BR>
+<H2>Thanks to:</h2>
+Ryu Takegami for FM-7/8/77/AV/40/EX<BR>
+<B>HP:</B><BR> <A HREF="http://xm7.la.coocan.jp/xm7/">http://xm7.la.coocan.jp/xm7/</A><BR>
 <I>E-Mail: whatisthis.sowhat _at_ gmail.com </I><BR>
 
 
@@ -70,5 +73,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Sun 10, Dec 2017 19:48:05<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sun 28, Jan 2018 17:19:35<!-- hhmts end -->
 </body> </html>
