--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,7 +9,7 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2017-12-27<BR>
-Qt Port and FM7 series 2018-01-28 FLEX TEST 2<BR>
+Qt Port and FM7 series 2018-01-29 FLEX TEST 3<BR>
 libCSPavio 2.6.13<BR>
 libCSPgui 2.10.8<BR>
 libCSPosd 2.9.14<BR>
@@ -17,7 +17,7 @@ libCSPemu_utils 2.6.4<BR>
 libCSPcommon_vm 1.1.26<BR>
 libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: 
+Build Version: 583d6c628d90055925fa5a7b697a52e60e0052ee<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
