[DOC] Update documents.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,15 +9,15 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2017-12-27<BR>
-Qt Port and FM7 series 2018-01-30 FLEX TEST 4<BR>
-libCSPavio 2.6.13<BR>
-libCSPgui 2.10.8<BR>
-libCSPosd 2.9.14<BR>
-libCSPemu_utils 2.6.4<BR>
-libCSPcommon_vm 1.1.26<BR>
+Qt Port and FM7 series 2018-02-10<BR>
+libCSPavio 2.7.0<BR>
+libCSPgui 2.11.0<BR>
+libCSPosd 2.10.0<BR>
+libCSPemu_utils 2.7.0<BR>
+libCSPcommon_vm 1.1.27<BR>
 libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: 6d81b4861a547c2a1f908022142953284ea26e05<BR>
+Build Version: a14677dfb396ece914c338861523aa903aad1740<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -73,5 +73,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Sun 28, Jan 2018 17:19:35<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat 10, Feb 2018 18:07:17<!-- hhmts end -->
 </body> </html>
