[DOC] Update DOCs.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -17,7 +17,7 @@ libCSPemu_utils 2.7.0<BR>
 libCSPcommon_vm 1.1.27<BR>
 libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: a14677dfb396ece914c338861523aa903aad1740<BR>
+Build Version: 221fcef002f101b8dffd2a63edfc11a86e2c688a<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -29,10 +29,14 @@ Build Version: a14677dfb396ece914c338861523aa903aad1740<BR>
 2015 ©Kyuma Ohta<BR>
 <B>HP1:</B><BR> <A HREF="https://github.com/Artanejp/common_source_project-fm7">https://github.com/Artanejp/common_source_project-fm7</A><BR>
 <B>HP2:</B><BR> <A HREF="https://osdn.jp/projects/csp-qt/">https://osdn.jp/projects/csp-qt/</A><BR>
+<I>E-Mail: whatisthis.sowhat _at_ gmail.com </I><BR>
+<I>Twitter: @Artanejp</I><BR>
+<BR>
 <H2>Thanks to:</h2>
 Ryu Takegami for FM-7/8/77/AV/40/EX<BR>
 <B>HP:</B><BR> <A HREF="http://xm7.la.coocan.jp/xm7/">http://xm7.la.coocan.jp/xm7/</A><BR>
-<I>E-Mail: whatisthis.sowhat _at_ gmail.com </I><BR>
+はせりん for FM-7/8/77/AV/40/EX<BR>
+<B>HP:</B><BR> <A HREF="http://www.mindspring.com/~thasegaw/rpcg/index.html">http://www.mindspring.com/~thasegaw/rpcg/index.html</A><BR>
 
 
 <h2>PC-6001 Series , SEGA Master System/Game Gear, MSX1 and MSX2:</h2>
@@ -51,7 +55,6 @@ Ryu Takegami for FM-7/8/77/AV/40/EX<BR>
 2014,2015 ©Isizu<BR>
 <B>HP:</B><BR> <A HREF="http://w01.tp1.jp/~a571632211/index.html">http://w01.tp1.jp/~a571632211/index.html</A><BR>
 <A HREF="http://w01.tp1.jp/~a571632211/z80tvgame/index.html">http://w01.tp1.jp/~a571632211/z80tvgame/index.html</A><BR>
-
 
 <h2>FM-7/8/77/AV Series:</h2>
 2015 ©Kyuma Ohta<BR>
@@ -73,5 +76,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Sat 10, Feb 2018 18:07:17<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sun 11 Feb, 2018 02:27:58<!-- hhmts end -->
 </body> </html>
