--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,7 +9,7 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2017-12-27<BR>
-Qt Port and FM7 series 2018-02-10<BR>
+Qt Port and FM7 series 2018-02-16 FM7 TEST1<BR>
 libCSPavio 2.7.0<BR>
 libCSPgui 2.11.0<BR>
 libCSPosd 2.10.0<BR>
@@ -17,7 +17,7 @@ libCSPemu_utils 2.7.0<BR>
 libCSPcommon_vm 1.1.27<BR>
 libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: 221fcef002f101b8dffd2a63edfc11a86e2c688a<BR>
+Build Version: <BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
