[DOC] Update credits.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -17,7 +17,7 @@ libCSPemu_utils 2.7.0<BR>
 libCSPcommon_vm 1.1.27<BR>
 libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: <BR>
+Build Version: 4749bb9902ed6f422c12496e4c85f95ba7fff494<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
