--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,15 +9,15 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2017-12-27<BR>
-Qt Port and FM7 series 2018-02-16 FM7 TEST1<BR>
+Qt Port and FM7 series 2018-02-22 FDC TEST1<BR>
 libCSPavio 2.7.0<BR>
-libCSPgui 2.11.0<BR>
-libCSPosd 2.10.0<BR>
+libCSPgui 2.11.2<BR>
+libCSPosd 2.10.1<BR>
 libCSPemu_utils 2.7.0<BR>
 libCSPcommon_vm 1.1.27<BR>
 libCSPfmgen 1.1.2<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: 4749bb9902ed6f422c12496e4c85f95ba7fff494<BR>
+Build Version: fa07e353db77a757c8f8d33c296ec6a51cf14220<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
