--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,15 +9,15 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2018-02-23<BR>
-Qt Port and FM7 series 2018-02-24 FDC TEST2<BR>
-libCSPavio 2.7.0<BR>
-libCSPgui 2.11.2<BR>
-libCSPosd 2.10.1<BR>
-libCSPemu_utils 2.7.0<BR>
-libCSPcommon_vm 1.1.27<BR>
-libCSPfmgen 1.1.2<BR>
+Qt Port and FM7 series 2018-02-25 FDC TEST2<BR>
+libCSPavio 2.7.1<BR>
+libCSPgui 2.11.3<BR>
+libCSPosd 2.10.2<BR>
+libCSPemu_utils 2.7.1<BR>
+libCSPcommon_vm 1.1.28<BR>
+libCSPfmgen 1.1.3<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: fa07e353db77a757c8f8d33c296ec6a51cf14220<BR>
+Build Version: <BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
