--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,16 +8,16 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
-Upstream Version: 2018-02-23<BR>
-Qt Port and FM7 series 2018-02-25 FDC TEST2<BR>
+Upstream Version: 2018-03-01<BR>
+Qt Port and FM7 series 2018-03-01 FDC TEST4<BR>
 libCSPavio 2.7.1<BR>
-libCSPgui 2.11.3<BR>
+libCSPgui 2.11.4<BR>
 libCSPosd 2.10.2<BR>
 libCSPemu_utils 2.7.1<BR>
-libCSPcommon_vm 1.1.28<BR>
+libCSPcommon_vm 1.1.29<BR>
 libCSPfmgen 1.1.3<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: <BR>
+Build Version: 7aaaad6455fc66b9aed368bff2e500c98d622195<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
