[DOC] Updated. [BUILD][CMAKE][INSTALLER] Update SOVERSION.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,15 +9,15 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2018-03-01<BR>
-Qt Port and FM7 series 2018-03-01 FDC TEST4<BR>
-libCSPavio 2.7.1<BR>
+Qt Port and FM7 series 2018-03-04<BR>
+libCSPavio 2.7.2<BR>
 libCSPgui 2.11.4<BR>
-libCSPosd 2.10.2<BR>
+libCSPosd 2.10.3<BR>
 libCSPemu_utils 2.7.1<BR>
 libCSPcommon_vm 1.1.29<BR>
 libCSPfmgen 1.1.3<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: 7aaaad6455fc66b9aed368bff2e500c98d622195<BR>
+Build Version: 7c0c0657f8f726e7aa86ace64777036e1cca4ce4<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
