[GENERAL] Update SOVERSION.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -9,15 +9,15 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2018-03-01<BR>
-Qt Port and FM7 series 2018-03-04<BR>
-libCSPavio 2.7.2<BR>
-libCSPgui 2.11.4<BR>
-libCSPosd 2.10.3<BR>
+Qt Port and FM7 series 2018-03-26<BR>
+libCSPavio 2.7.3<BR>
+libCSPgui 2.11.5<BR>
+libCSPosd 2.10.4<BR>
 libCSPemu_utils 2.7.1<BR>
-libCSPcommon_vm 1.1.29<BR>
+libCSPcommon_vm 1.1.30<BR>
 libCSPfmgen 1.1.3<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: 7c0c0657f8f726e7aa86ace64777036e1cca4ce4<BR>
+Build Version: <BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -76,5 +76,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Sun 11 Feb, 2018 02:27:58<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Mon 26 Mar, 2018 01:27:39<!-- hhmts end -->
 </body> </html>
