[DOC] Update docs.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -17,7 +17,7 @@ libCSPemu_utils 2.7.1<BR>
 libCSPcommon_vm 1.1.30<BR>
 libCSPfmgen 1.1.3<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: <BR>
+Build Version: f8f16ac6f19fe2dcab250ad50d96cf0b30c8903e<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
