--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -10,14 +10,8 @@
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2018-05-24<BR>
 Qt Port and FM7 series 2018-07-13<BR>
-libCSPavio 2.8.2<BR>
-libCSPgui 2.13.3<BR>
-libCSPosd 2.12.3<BR>
-libCSPemu_utils 2.11.8<BR>
-libCSPcommon_vm 1.4.6<BR>
-libCSPfmgen 1.2.3<BR>
 FFMPEG 4.0 + liblame 3.99 + libx264-155<BR>
-Build Version: 9275209c6bed03ccd06716a486e29451c446751d<BR>
+@@RevisionString@@
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -76,5 +70,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Fri 13 July, 2018 13:09:15<!-- hhmts end -->
+<!-- hhmts start -->Last modified: @@BuildDateAt@@<!-- hhmts end -->
 </body> </html>
