--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -8,8 +8,8 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
-Upstream Version: 2018-10-14<BR>
-Qt Port and FM7 series 2018-10-28<BR>
+Upstream Version: 2018-11-23<BR>
+Qt Port and FM7 series 2018-11-2x<BR>
 FFMPEG 4.0 + liblame 3.99 + libx264-155<BR>
 @@RevisionString@@
 </FONT></DIV>
