[UI][Qt][ABOUT_DIALOG] Print OpenGL version within dialog. [UI][Qt][ABOUT_DIALOG] Maybe improve credit displaying.

--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -7,68 +7,161 @@
 
 <body>
 <h1>Common Source Code Project</h1>
-<DIV ALIGN=RIGHT><FONT SIZE=3>
+
+<DIV ALIGN=LEFT><FONT SIZE=5>
+<h3>Renderer Type:</h3>
+</DIV>
+<DIV ALIGN=RIGHT><h3>
+@@RendererType@@
+</h3>
+</DIV>
+</FONT>
+
+<DIV ALIGN=RIGHT><FONT SIZE=4>
 Upstream Version: 2019-04-30<BR>
 Qt Port and FM7 series 2019-10-15<BR>
 FFMPEG 4.2 + liblame 3.100 + libx264-158<BR>
 @@RevisionString@@
 </FONT></DIV>
 <BR>
-<DIV ALIGN=RIGHT><FONT SIZE=3>
-<h2>Upstream Author:</h2>
-2006,2015 ©TAKEDA Toshiya<BR>
-<B>HP:</B><BR> <A HREF="http://takeda-toshiya.my.coocan.jp/common/index.html">http://takeda-toshiya.my.coocan.jp/common/index.html</A><BR>
 
-<h2>Porting to Qt:</h2>
-2015 ©Kyuma Ohta<BR>
-<B>HP1:</B><BR> <A HREF="https://github.com/Artanejp/common_source_project-fm7">https://github.com/Artanejp/common_source_project-fm7</A><BR>
-<B>HP2:</B><BR> <A HREF="https://osdn.jp/projects/csp-qt/">https://osdn.jp/projects/csp-qt/</A><BR>
+<FONT SIZE=4>
+<DIV ALIGN=LEFT>
+<h2>Upstream Author:<BR>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2006,2015,2019 ©TAKEDA Toshiya</h2>
+</DIV>
+<DIV ALIGN=LEFT>
+<B>HP:</B>
+</DIV>
+<DIV ALIGN=RIGHT>
+<A HREF="http://takeda-toshiya.my.coocan.jp/common/index.html">http://takeda-toshiya.my.coocan.jp/common/index.html</A><BR>
+</DIV>
+<DIV ALIGN=LEFT>
+<h2>Porting to Qt: <BR>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2015-2019 ©Kyuma Ohta</h2>
+</DIV>
+</DIV>
+
+<DIV ALIGN=LEFT>
+<B>HP1:</B>
+</DIV>
+<DIV ALIGN=RIGHT>
+<A HREF="https://github.com/Artanejp/common_source_project-fm7">https://github.com/Artanejp/common_source_project-fm7</A>
+</DIV>
+<DIV ALIGN=LEFT>
+<B>HP2:</B>
+</DIV>
+<DIV ALIGN=RIGHT>
+<A HREF="https://osdn.jp/projects/csp-qt/">https://osdn.jp/projects/csp-qt/</A><BR>
 <I>E-Mail: whatisthis.sowhat _at_ gmail.com </I><BR>
 <I>Twitter: @Artanejp</I><BR>
-<BR>
+</DIV>
+
+<DIV ALIGN=LEFT>
 <H2>Thanks to:</h2>
-Ryu Takegami for FM-7/8/77/AV/40/EX<BR>
-<B>HP:</B><BR> <A HREF="http://xm7.la.coocan.jp/xm7/">http://xm7.la.coocan.jp/xm7/</A><BR>
-はせりん for FM-7/8/77/AV/40/EX<BR>
-<B>HP:</B><BR> <A HREF="http://www.mindspring.com/~thasegaw/rpcg/index.html">http://www.mindspring.com/~thasegaw/rpcg/index.html</A><BR>
+</DIV>
 
+<DIV ALIGN=LEFT>
+<H3>
+- Ryu Takegami for FM-7/8/77/AV/40/EX<BR>
+</H3>
+</DIV>
+<DIV ALIGN=LEFT>
+<B>HP:</B>
+</DIV>
+<DIV ALIGN=RIGHT>
+<A HREF="http://xm7.la.coocan.jp/xm7/">http://xm7.la.coocan.jp/xm7/</A>
+<BR><BR>
+</DIV>
+<DIV ALIGN=LEFT>
+<H3>
+- はせりん for FM-7/8/77/AV/40/EX
+</H3>
+</DIV>
+<DIV ALIGN=LEFT>
+<B>HP:</B>
+</DIV>
+<DIV ALIGN=RIGHT>
+<A HREF="http://www.mindspring.com/~thasegaw/rpcg/index.html">http://www.mindspring.com/~thasegaw/rpcg/index.html</A>
+</DIV>
 
-<h2>PC-6001 Series , SEGA Master System/Game Gear, MSX1 and MSX2:</h2>
-2015 ©tanam<BR>
-<B>HP:</B><BR> <A HREF="http://www.geocities.jp/parallel_computer_inc/android.html">http://www.geocities.jp/parallel_computer_inc/android.html</A><BR>
+<DIV ALIGN=LEFT>
+<h3>PC-6001 Series , SEGA Master System/Game Gear, MSX1 and MSX2:</h3>
+</DIV>
+<DIV ALIGN=LEFT>
+<h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2015 ©tanam</h3>
+</DIV>
+<B>HP:</B>
+</DIV>
+<DIV ALIGN=RIGHT>
+<A HREF="http://www.geocities.jp/parallel_computer_inc/android.html">http://www.geocities.jp/parallel_computer_inc/android.html</A>
+</DIV>
 
-<h2>MSX1 and MSX2:</h2>
-2015 ©umaiboux<BR>
-<B>HP:</B><BR> <A HREF="http://umaiboux.k-free.net/">http://umaiboux.k-free.net/</A><BR>
+<DIV ALIGN=LEFT>
+<h3>MSX1 and MSX2: <BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2015 ©umaiboux</h3>
+</DIV>
+<DIV ALIGN=LEFT>
+<B>HP:</B>
+</DIV>
+<DIV ALIGN=RIGHT>
+<A HREF="http://umaiboux.k-free.net/">http://umaiboux.k-free.net/</A>
+</DIV>
 
-<h2>MZ-80A:</h2>
-2014,2015 ©hideki suga<BR>
-<B>HP:</B><BR> <A HREF="http://www.ne.jp/asahi/suga/junkyard/">http://www.ne.jp/asahi/suga/junkyard/</A><BR>
+<DIV ALIGN=LEFT>
+<h3>MZ-80A: <BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2014,2015 ©hideki suga</h3>
+</DIV>
+<DIV ALIGN=LEFT>
+<B>HP:</B>
+</DIV>
+<DIV ALIGN=RIGHT>
+<A HREF="http://www.ne.jp/asahi/suga/junkyard/">http://www.ne.jp/asahi/suga/junkyard/</A>
+</DIV>
 
-<h2>Z80 TV Game:</h2>
-2014,2015 ©Isizu<BR>
-<B>HP:</B><BR> <A HREF="http://w01.tp1.jp/~a571632211/index.html">http://w01.tp1.jp/~a571632211/index.html</A><BR>
-<A HREF="http://w01.tp1.jp/~a571632211/z80tvgame/index.html">http://w01.tp1.jp/~a571632211/z80tvgame/index.html</A><BR>
+<DIV ALIGN=LEFT>
+<h3>Z80 TV Game: <BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2014,2015 ©Isizu</h3>
+</DIV>
+<DIV ALIGN=LEFT>
+<B>HP:</B>
+</DIV>
+<DIV ALIGN=RIGHT>
+<A HREF="http://w01.tp1.jp/~a571632211/index.html">http://w01.tp1.jp/~a571632211/index.html</A><BR>
+<A HREF="http://w01.tp1.jp/~a571632211/z80tvgame/index.html">http://w01.tp1.jp/~a571632211/z80tvgame/index.html</A>
+</DIV>
 
-<h2>FM-7/8/77/AV Series:</h2>
-2015 ©Kyuma Ohta<BR>
-<B>HP:</B><BR>
+<DIV ALIGN=LEFT>
+<h3>FM-7/8/77/AV Series: <BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2015 ©Kyuma Ohta</h3>
+</DIV>
+<DIV ALIGN=LEFT>
+<B>HP:</B>
+</DIV>
+<DIV ALIGN=RIGHT>
 <A HREF="https://osdn.jp/projects/csp-qt/">https://osdn.jp/projects/csp-qt/</A><BR>
+</DIV>
+<DIV ALIGN=LEFT>
 <B>Secondary:</B><BR>
+</DIV>
+<DIV ALIGN=RIGHT>
+
 <A HREF="https://github.com/Artanejp/common_source_project-fm7">https://github.com/Artanejp/common_source_project-fm7</A><BR>
 <BR>
+<I>E-Mail: whatisthis.sowhat _at_ gmail.com </I>
+</DIV>
 <BR>
-<I>E-Mail: whatisthis.sowhat _at_ gmail.com </I><BR>
-<BR>
-<BR>
+<DIV ALIGN=LEFT>
 <B>All of distributing are published under Gnu Public License version 2.<BR>
 You must publish sourcecodes to users of binaries, you must publish changes of source codes to users.<BR>
 <BR>
 See also:<BR>
-<A HREF="https://www.gnu.org/licenses/gpl-2.0.html">https://www.gnu.org/licenses/gpl-2.0.html</A> .<BR>
+<DIV ALIGN=RIGHT>
+<A HREF="https://www.gnu.org/licenses/gpl-2.0.html">https://www.gnu.org/licenses/gpl-2.0.html</A> .
+</DIV>
+<BR>
 </B>
 </FONT>
 <hr>
+</DIV>
+<DIV ALIGN=RIGHT>
 <address></address>
 <!-- hhmts start -->Last modified: @@BuildDateAt@@<!-- hhmts end -->
+</DIV>
 </body> </html>
