--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -18,8 +18,8 @@
 </FONT>
 
 <DIV ALIGN=RIGHT><FONT SIZE=4>
-Upstream Version: 2021-02-07<BR>
-Qt Port and FM7 series 2021-xx-xx<BR>
+Upstream Version: 2021-05-06<BR>
+Qt Port and FM7 series 2021-05-16<BR>
 FFMPEG 4.3 + liblame 3.100 + libx264-161<BR>
 @@RevisionString@@
 </FONT></DIV>
