--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -18,8 +18,8 @@
 </FONT>
 
 <DIV ALIGN=RIGHT><FONT SIZE=4>
-Upstream Version: 2021-05-02<BR>
-Qt Port and FM7 series 2021-08-01<BR>
+Upstream Version: 2021-12-30<BR>
+Qt Port and FM7 series 2022-01-23-tmp<BR>
 FFMPEG 4.3 + liblame 3.100 + libx264-161<BR>
 @@RevisionString@@
 </FONT></DIV>
