--- a/source/src/res/credits.html
+++ b/source/src/res/credits.html
@@ -18,8 +18,8 @@
 </FONT>
 
 <DIV ALIGN=RIGHT><FONT SIZE=4>
-Upstream Version: 2022-09-11<BR>
-Qt Port and FM7 series 2023-03-06-tmp<BR>
+Upstream Version: 2022-10-12<BR>
+Qt Port and FM7 series 2023-03-06-tmp-2<BR>
 FFMPEG 5.1 + liblame 3.100 + libx264-164<BR>
 @@RevisionString@@
 </FONT></DIV>
